@@ -1,3 +1,8 @@
+Tue Jun  8 16:42:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/bigdecimal/bigdecimal.c (VpAlloc): ensure buf does not get
+	  collected.  based on a patch masaya tarui at [ruby-dev:41213].
+
 Tue Jun  8 16:08:00 2010  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* lib/net/imap.rb (fetch_internal): do not quote message data item
